--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "allowJs": true,
-    "lib": [
-      "es2019",
-      "dom"
-    ],
+    "lib": ["es2019", "dom"],
     "rootDir": "src",
     "moduleResolution": "node"
   }
